0.2.0		UNRELEASED

 FEATURES

  * Add progress bar in manifest converter. (Jelmer Vernooij)

  * Support "bzr upgrade" in Mercurial working trees. (Jelmer Vernooij)

 BUG FIXES

  * Mark as compatible with Bazaar 2.1. (Jelmer Vernooij)

  * Check for Mercurial version before attempting to import it.
    (#432100, Jelmer Vernooij)

  * Deal with spaces in paths. (Jelmer Vernooij)

  * Remove empty directories during fetch. (Jelmer Vernooij)

0.1.0		2009-09-24

 Initial release.